# ciphie

./: .env.example  .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  Ciphie.command  LICENSE  README.md  ciphie.db  pyproject.toml  pytest.ini  requirements.txt
backend/app/: auth.py  cli.py  config.py  crypto.py  database.py
backend/tests/: conftest.py  test_2fa.py  test_audit.py  test_auth.py  test_crypto.py  test_expiry.py  test_registro.py  test_secrets.py  test_versioning.py
docs/: journal.md
docs/screenshots/: README.md
frontend/: app.py
